Test #2 to correct image apperance on safari

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -10,7 +10,6 @@ body {
 }
 
 .series-list .thumbnail img {
-    min-height: 100%;
     min-width: 100%;
 }
 
